correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -97,13 +97,14 @@ span.float-left {
 float: left;
 }
 
+/*
 .cont-td{
   border-collapse: collapse;
   margin: 0px;
   padding: 0px;
   border: 0px;
   height: 20px; !important
-}
+}*/
 
 
 .inner-table {
@@ -113,13 +114,6 @@ float: left;
   border: 0px;
   padding: 0px;
   width: 100%;
-  height: 20px; !important
-}
-
-.inner-row {
-  border-collapse: collapse; !important
-  margin: 0px; !important
-  width: 100%; !important
   height: 20px; !important
 }
 
